# ai-cfo-platform

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json  pyproject.toml
app/: globals.css  (+2 more)
apps/api/: Dockerfile  alembic.ini  main.py  pyproject.toml  test_gemini.py
apps/api/app/: main.py
apps/api/app/accounts/: api.py  constants.py  default_accounts.py  model.py  repository.py  schema.py  service.py
apps/api/app/agents/: api.py  graph.py  prompts.py  providers.py  registry.py  schemas.py  service.py  state.py  supervisor.py  tools.py
apps/api/app/auth/: api.py  dependency.py  permissions.py  repository.py  security.py  service.py
apps/api/app/common/: enums.py
apps/api/app/core/: config.py  roles.py
apps/api/app/customers/: api.py  model.py  repository.py  schema.py  service.py
apps/api/app/dashboard/: api.py  schemas.py  service.py
apps/api/app/db/: engine.py  session.py
apps/api/app/invoices/: api.py  calculator.py  model.py  repository.py  schema.py  service.py
apps/api/app/journal_entries/: api.py  model.py  repository.py  schema.py  service.py
apps/api/app/models/: mixins.py  user.py
apps/api/app/organization_members/: model.py  repository.py  service.py
apps/api/app/organizations/: api.py  model.py  repository.py  schema.py  service.py
apps/api/app/payments/: api.py  model.py  repository.py  schema.py  service.py
apps/api/app/repositories/: health_repository.py
apps/api/app/users/: api.py  model.py  repository.py  schema.py  service.py
apps/api/migrations/: env.py
(+34 files in other folders)
