[project]
name = "ai-cfo-platform"
version = "0.1.0"
description = "Production-grade AI CFO Platform"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "email-validator>=2.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
]

[tool.uv.workspace]
members = [
    "apps/api",
]
